# premier

./: .gitignore  .gitmodules  Cargo.toml  README.md  config.toml
examples/keycloak-mysql/: Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  premier.toml  premier_migration.sql  start.sh
examples/keycloak-mysql/mysql/: credentials.cnf  keycloak-migration.sql  premier-migration.sql
examples/sqlite/migrations/: 0001_init.sql
mysql-es/: Cargo.toml
src/: Domain breakdown.txt  main.rs
src/application/: base_query.rs  error.rs  mod.rs
src/application/order/: commands.rs  services.rs
src/application/platform/: commands.rs  services.rs
src/application/platform/queries/: mod.rs  platform.rs  simple_logging.rs
src/application/product/: commands.rs  mod.rs  services.rs
src/application/product/queries/: downstream_cqrs.rs  mod.rs  product.rs  simple_logging.rs  store_products.rs  vendor_products.rs
src/application/store/: commands.rs  services.rs
src/application/store/queries/: mod.rs  simple_logging.rs  store_products.rs
src/commons/: entities.rs  filter.rs  item_group.rs  mod.rs
src/commons/cqrs/: mod.rs  view.rs
src/domain/: mod.rs
src/domain/order/: aggregate.rs  error.rs  events.rs  mod.rs
src/domain/order/entities/: buyer.rs  mod.rs  order.rs  payment_option.rs  product.rs  store.rs  variant.rs  warehouse.rs
src/domain/platform/: aggregate.rs  error.rs  events.rs  mod.rs
src/domain/platform/entities/: category.rs  mod.rs  plan.rs  platform.rs
src/domain/product/: aggregate.rs  error.rs  events.rs  mod.rs
src/domain/product/entities/: allocation.rs  category.rs  group.rs  mod.rs  order.rs  page.rs  payment_option.rs  platform.rs  product.rs  stock.rs  store.rs  variant.rs  vendor.rs  warehouse.rs
src/domain/store/: aggregate.rs  error.rs  events.rs  mod.rs
src/domain/store/entities/: mod.rs  page.rs  plan.rs  seller.rs  store.rs
src/infrastructure/: error.rs  mod.rs  mysql.rs
src/infrastructure/auth/: mod.rs  session.rs
src/infrastructure/auth/oidc_providers/: keycloak.rs  mod.rs
src/infrastructure/database/: mod.rs  mysql.rs  sqlite.rs
src/infrastructure/product/: services.rs
src/infrastructure/store/: services.rs
src/presentation/: error.rs  mod.rs  service.rs  startup.rs
src/presentation/cli/: mod.rs  parse.rs
src/presentation/cli/config/: graphql.rs  mod.rs
src/presentation/graphql/: mod.rs  mutation_root.rs
src/presentation/graphql/queries/: mod.rs  (+2 more)
(+5 files in other folders)
