[package]
authors = ["Jonas Lima <jonaslimads@gmail.com>"]
edition = "2021"
name = "premier"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {version = "3.0.38", features = ["chrono"]}
async-graphql-warp = "3.0.38"
async-trait = "0.1.53"
chrono = {version = "0.4.19", features = ["serde"]}
clap = {version = "3.1.15", features = ["derive"]}
cqrs-es = "0.4.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.21"
http = "0.2.7"
itertools = "0.10.3"
jsonwebtoken = "8.1.0"
keycloak = "18.0.0"
log = "0.4.16"
mysql-es = "0.4.0"
paste = "1.0.7"
reqwest = "0.11.10"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
sqlx = {version = "0.5.13", features = ["mysql", "runtime-tokio-native-tls", "json"]}
thiserror = "1.0.30"
tokio = {version = "1.18.0", features = ["full"]}
toml = "0.5.9"
uuid = {version = "0.8.2", features = ["serde", "v4"]}
warp = "0.3.2"
